 * Fix error messages on startup on Windows when VLC wasn't correctly uninstalled before installation
 * Various crashes fixed in PS, SSA, mkv, xspf, freetype
 * Fix pausing behaviour for subtitles
 * Multiple subtitles and podcast fixes
 * Fix bug in directory opening on Mac OS X
 * Fix lost playlist columns when switching the playlist view

Changes between 0.9.1 and 0.9.2:
--------------------------------

 * Restored the old behavior of --sout-keep. It is now de-activated by default.
 * Skins2 interface repaired on Windows.
 * Multiple bugfixes.


Changes between 0.9.1 and 0.9.0:
--------------------------------

 * Multiple bug fixes.


Changes between 0.8.6i and 0.9.0:
---------------------------------

Important notes:
----------------
 * This release will need Windows 2000 and Mac OS X 10.4 (Tiger), or more
   recent to work correctly
 * The HTTP interface is now only available on the local machine by default.
   If you want to make it available from other machines, you will have to
   edit the ".hosts" file.
   - On UNIX/Linux, the file is in /usr/share/vlc/http/.hosts
     If you're using the old http interface, it's located in
     /usr/share/vlc/http/old/.hosts
   - On Windows they are in C:\Program Files\VideoLAN\VLC\http\.hosts and
     C:\Program Files\VideoLAN\VLC\http\old\.hosts
   - On Mac OS X, you can find it in VLC.app/Contents/MacOS/share/http/.hosts
     and respectively in VLC.app/Contents/MacOS/share/http/old/.hosts
 * This version of VLC contains a new interface for Windows and Linux.
   This interface has a fullscreen controller and simplified preferences.
   This interface lacks the "Streaming Wizard" that used to be present in VLC
   0.8.6, but provides basic profiles.
 * The behavior of --sout-keep was changed. It's now activated by default.
 * The marq, mosaic and logo commands in the rc interface changed. They
   now require a target name as their first argument. Example: