@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>408</width>
-    <height>513</height>
+    <width>482</width>
+    <height>516</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -96,6 +96,13 @@
         </property>
         <property name="checked" >
          <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2" >
+       <widget class="QCheckBox" name="hwYUVBox" >
+        <property name="text" >
+         <string>_("Use hardware YUV->RGB conversions")</string>
         </property>
        </widget>
       </item>
