@@ -8,6 +8,7 @@ Changes between 0.9.2 and 0.9.3-git:
  * Multiple subtitles and podcast fixes
  * Fix bug in directory opening on Mac OS X
  * Fix lost playlist columns when switching the playlist view
+ * Add necessary options to Simple preferences (to avoid NVIDIA drivers issues)
 
 Changes between 0.9.1 and 0.9.2:
 --------------------------------
